fix: image overflow

--- a/Documentation/doc/doc.css
+++ b/Documentation/doc/doc.css
@@ -18,11 +18,13 @@
   }
   
   .sidenav a {
-    padding: 6px 8px 19px 16px;
+    padding: 6px 8px 20px 16px;
     text-decoration: none;
     font-size: 20px;
     color: var(--grey-600);
-    display: block;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
   }
   
   .sidenav a:hover {
